boton para filtrar

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,16 +4,9 @@
     <div class="input-group mb-3">
       <input #search1 type="text" (keyup.enter)="search(search1.value)" class="form-control" aria-label="Buscar Artistas..." aria-describedby="Buscar">
       <div class="input-group-append">
-        <button (click)="search(search1.value)"  class="btn btn-dark" type="button" id="button-addon2">Buscar Artista</button>
+        <button (click)="search(search1.value)"  class="btn btn-dark" type="button" id="button-addon2">Buscar...</button>
         
       </div>
-    </div>
-  </div>
-
-  <div>
-    <div class="input-group-append">
-      <button (click)="search(search2.value)"  class="btn btn-dark" type="button" id="button-addon3">Buscar Cancion</button>
-      
     </div>
   </div>
 </div>
